--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>D3Times</title>
+  <link rel="shortcut icon" href="#" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
-  <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-  <!-- <link rel="stylesheet" href="assets/css/d3Style.css"> -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/d3Style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
 
 </head>
 
@@ -38,9 +39,7 @@
 
           <p>Where do factors like smoking and obesity tend to lie?</p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>You can find a Green Elephant but no Red Donkeys, indicator of the direction the public is moving.</p>
         </div>
       </div>
     </div>
